# pytrade

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  run.sh
data/: 1999pub0.CFG  1999sub0.CFG  example.CFG  example1.CFG  example1.csv  pub1.cfg  pub1.evzip  pub1.hdr
pytrade/: __init__.py  comtrade.py  configuration.py  data.py  plot.py  reader.py
