[tool.poetry]
name = "pytrade"
version = "0.1.1"
description = ""
authors = ["Arthur Zopellaro <arthurazs@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = { version = "^3", optional = true }
seaborn = { version = "^0", optional = true }

[tool.poetry.extras]
plot = ["matplotlib", "seaborn"]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.23"
flake8-simplify = "^0.19.3"
flake8-builtins = "^2.0.0"
pep8-naming = "^0.13.2"
flake8-isort = "^5.0.0"
flake8-noqa = "^1.2.9"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
flake8-annotations = "^2.9.1"
flake8-new-union-types = "^0.4.1"
flake8-type-checking = "^2.2.0"
flake8-bandit = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"

[tool.poetry.scripts]
rc = 'pytrade.reader:run'
