[project]
name = "pytrade"
version = "0.1.5"
description = "Python COMTRADE reader"
authors = [{ name = "Arthur Zopellaro", email = "github@zope.me" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pytrade"]

[project.optional-dependencies]
plot = [
  "seaborn==0.13.2",
]
dev = [
  "ruff==0.3.1",
  "mypy==1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/arthurazs/pytrade"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
  "F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "ASYNC", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ",
  "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF",
  "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR",
  "PERF", "RUF",
]
ignore = ["D203", "D213", "FA102"]
extend-ignore = ["D", "FIX002", "TD003"]
line-length = 120

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"
exclude = ["build", ".venv"]

[project.scripts]
rc = 'pytrade.reader:run'

