[project]
name = "pytrade"
version = "0.1.11"
description = "Python COMTRADE reader"
authors = [{ name = "Arthur Zopellaro", email = "github@zope.me" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pytrade"]

[project.optional-dependencies]
plot = [
  "seaborn==0.13.2",
  "pandas-stubs==2.2.0.240218",
]
dev = [
  "ruff==0.3.2",
  "mypy==1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/arthurazs/pytrade"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
pydocstyle.convention = "google"
ignore = ["D103", "D100", "D102", "FIX002", "TD003", "D105", "D107", "D101", "UP035"]

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"
exclude = ["build", ".venv"]

[project.scripts]
rc = 'pytrade.reader:main'
rc-d = "pytrade.reader:debug"

